[metadata]
name = ovizioapi
version = 0.3
url = https://gitlab.ldv.ei.tum.de/cellface/ovizioapi
author = The CellFace Group
author_email = cellface@ei.tum.de
description = API for accessing Ovizio Reconstruction Tools
long_description = file:README.rst
platforms = win
classifiers =
	Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    deepdiff
    dynaconf
    numpy
    pythonnet
    pytz
    pywin32
    xmltodict

include_package_data = True

[options.extras_require]
examples =
    cellface
    jupyter
    matplotlib
    seaborn
    tqdm

tests =
    pytest
    flake8

